# gef-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: release.yml
env/: common@darwin  common@wasm  common@win32  debug
inc/: gchannel.h  gcoroutine.h  gevent.h  gfile.h  gfilestream.h  gjson.h  glib.h  glibconfig.h  glibconfig.h.inc  gmemorystream.h  gobject.h  gprotobuf.h  gstream.h  gstring.h  gtime.h  gvalue.h
libs/mjson/: mjson.h
libs/printf/: printf.c  printf.h
src/: garray.c  gauto.c  gbuffer.c  gchannel.c  gcoroutine.c  gevent.c  gfile.c  gfilestream.c  ghash.c  ghashmap.c  gjson.c  glist.c  gmap.c  gmem.c  gmemorystream.c  gobject.c  gprotobuf.c  gslist.c  gstream.c  gstrfuncs.c  gstring.c  gtime.c  gutils.c  gvalue.c
tests/: CMakeLists.txt  test_array.c  test_auto.c  test_channel.c  test_coroutine.c  test_event.c  test_hashtable.c  test_json.c  test_list.c  test_map.c  test_mem.c  test_protobuf.c  test_slist.c  test_stream.c  test_strfuncs.c  test_string.c  test_time.c  test_utils.c  test_value.c
wasm/: debug.sh  release.sh
